# mat-mul-omp

./: CMakeLists.txt  Dockerfile  README.md  perf.py
res/mpi/1_MPI_Simple/: MPI_Paralel_Pi.txt  MPI_max_din_vector.txt  MPI_ringofproces.txt  MPI_topo_Hypercube.txt  MPI_topo_carth.txt  MPI_transm_buffer.txt  MPI_transm_sincr.txt
res/mpi/2_MPI_sort/: MPI_bubblesort.txt  MPI_bucketsort.txt
res/mpi/3_MM/MPI_cannon/: MPI_cannon_v1.txt
res/mpi/3_MM/MPI_fox/: Fox_v2.txt
res/mpi/4_Dijkstra/DijkstraSPv1_MPI/: DijkstraSPv4.cpp  DijkstraSPv4.vcxproj  DijkstraSPv4.vcxproj.filters  ReadMe.txt  stdafx.cpp
res/mpi/4_Dijkstra/DijkstraSPv1_MPI/Release/DijkstraSPv4.tlog/: DijkstraSPv4.lastbuildstate
res/mpi/4_Dijkstra/DijkstraSPv2_MPI/: DijkstraSPv5.cpp  DijkstraSPv5.vcxproj  DijkstraSPv5.vcxproj.filters  ReadMe.txt  stdafx.cpp
res/mpi/4_Dijkstra/DijkstraSPv2_MPI/Debug/DijkstraSPv5.tlog/: DijkstraSPv5.lastbuildstate
res/omp/: CMakeLists.txt  Ex_OpenMP.rar  OMP_PC.txt  OMP_RW1.txt  OMP_RW2.txt  OMP_pi_parallel_v2.c  OMP_pi_parallel_v3.c  OMP_pi_parallel_v3b.c  OMP_pi_parallel_v3c.c  OMP_pi_parallel_v4.c  OMP_pi_parallel_v5.c  loop.docx  loop_ex1_if_clause.c  loop_ex2.c  loop_ex2_ordered_clause.c  loop_ex3.c  loop_ex4.c  master_ex1.c  penmp  pi_serial.c  pitypes.docx  sections_ex1.c  single_ex1.c
res/omp/source/: OMP_pi_parallel_v1.c  loop_ex1.c
src/: Matrix.cpp  main.cpp
src/mpi/: CMakeLists.txt  main.cpp
src/omp/: CMakeLists.txt  Matrix.h
